--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,28 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
+  background: #ccc; }
+
+.app-wrapper {
+  display: flex; }
+
+.canvas-wrapper {
+  padding: 20px; }
+
+.toolbar__item {
+  display: block;
+  border: 2px solid #a5a5a5;
+  transition: border 300ms;
+  cursor: pointer;
+  padding: 10px;
+  margin: 10px 0; }
+  .toolbar__item > span {
+    opacity: .5;
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    border-radius: 50%;
+    transition: opacity 300ms; }
+  .toolbar__item.active {
+    border-color: #222; }
+  .toolbar__item.active > span, .toolbar__item:hover > span {
+    opacity: 1; }
