--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 body {
-  background: #ccc;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 4%; }
 
 .app-wrapper {
   display: flex; }
 
 .canvas-wrapper {
-  padding: 20px; }
+  box-shadow: #eff0ea 5px 5px 5px 0px;
+  border: 2px solid #eff0ea;
+  margin: 0 4%; }
