--- a/src/index.sass
+++ b/src/index.sass
@@ -1,6 +1,6 @@
 body
-    background: #ccc
     box-sizing: border-box
+    padding: 4%
 
 
 .app-wrapper
@@ -8,4 +8,6 @@ body
 
 
 .canvas-wrapper
-    padding: 20px
+    box-shadow: #eff0ea 5px 5px 5px 0px
+    border: 2px solid #eff0ea
+    margin: 0 4%
