--- a/src/components/ToolbarItem.css
+++ b/src/components/ToolbarItem.css
@@ -2,22 +2,10 @@
   background-color: #e8f2f2;
   list-style-type: none;
   padding: 4%; }
-  .toolbar__item {
-    display: block;
-    transition: border 300ms;
-    cursor: pointer;
-    padding: 10px;
-    margin: 10px 0; }
+  .toolbar h4, .toolbar p {
+    padding: 0 8px; }
   .toolbar.active {
     border-color: #222; }
-
-.toolbar_item > span {
-  opacity: .5;
-  display: block;
-  width: 140px;
-  height: 110px;
-  margin: auto;
-  transition: opacity 300ms; }
 
 .toolbar.active, .toolbar:hover > span {
   opacity: 1; }
@@ -29,9 +17,10 @@
   margin: 10px 10px;
   background-color: #ffffff;
   box-shadow: #e3e3e3 2px 2px; }
-
-.toolbar.active {
-  border-color: #222; }
-
-h4, p {
-  padding: 0 8px; }
+  .toolbar_item span {
+    opacity: .5;
+    display: block;
+    width: 140px;
+    height: 110px;
+    margin: auto;
+    transition: opacity 300ms; }
